2006-11-05  Thomas Schwinge <tschwinge@gnu.org>

	* config.h.in: Regenerate.
	* configure: Likewise.

	[task #5956 --- ``Automake'ify GNU Mach's code base'']
	* configure.ac <AM_INIT_AUTOMAKE>: Add `no-define' and `1.9'.

2006-11-05  Barry deFreese  <bddebian@comcast.net>

	[task #5878 --- ``Backport code from GNU Mach's trunk to
	gnumach-1-branch: i386_set_gdt, i386_get_gdt'']

	* i386/include/mach/i386/mach_i386.defs (i386_set_gdt, i386_get_gdt):
	New routines.
	* i386/i386/user_ldt.c (i386_set_gdt, i386_get_gdt): New functions.
	* i386/i386/gdt.h (USER_GDT, USER_GDT_SLOTS): New macros.
	(GDTSZ): Compute it from USER_GDT and USER_GDT_SLOTS.
	* i386/i386/thread.h: Include `gdt.h'.
	(struct i386_machine_state): New member `user_gdt'.
	* i386/i386/pcb.c (switch_ktss): Copy those slots into the GDT.
	* linux/dev/include/linux/head.h: New file.

2006-11-05  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	FPU, CPU and IO stubs cleanup.

	* i386/i386/fpu.h (fstcw): New macro.
	* i386/i386/locore.S (_fninit, _fstcw, _fldcw, _fnstsw, _fnclex)
	(_clts, _fpsave, _fprestore, set_cr3, get_cr3, flush_tlb, get_cr2)
	(get_ldt, set_ldt, get_tr, set_tr, _setts, outb, inb, outw, inw, outl)
	(inl, loutb, loutw, linb, linw): Remove functions.
	* i386/i386/proc_reg.h (flush_tlb): New macro.
	* i386/i386/db_interface.c: Include `i386/proc_reg.h'.
	* i386/intel/pmap.c: Likewise.
	* i386/intel/pmap.h: Likewise.
	* i386/i386/fpu.c: Include `i386/pio.h'.
	* i386/i386/pic.c: Likewise.
	* i386/i386/pit.c: Likewise.
	* i386/i386at/iopl.c: Likewise.
	* i386/i386at/kd.c: Likewise.
	* i386/i386at/kd_event.c: Likewise.
	* i386/i386at/kd_mouse.c: Likewise.
	* i386/i386at/rtc.c: Likewise.

2006-11-05  Barry deFreese  <bddebian@comcast.net>

	memcpy/memset cleanup.

	* include/string.h: New file.
	* include/mach/mig_support.h: Include `string.h'.
	[MACH_KERNEL] (bcopy): Remove extern declaration.
	[MACH_KERNEL] (memcpy): Remove macro.
	* device/cirbuf.c: Include `string.h'.