@@ -1,20 +1,0 @@
-#ifndef _LINUX_HEAD_H
-#define _LINUX_HEAD_H
-
-typedef struct desc_struct {
-	unsigned long a,b;
-} desc_table[256];
-
-/* XXX Linux code shouldn't use idt/gdt directly */
-/* extern desc_table idt,gdt; */
-
-#define GDT_NUL 0
-#define GDT_CODE 1
-#define GDT_DATA 2
-#define GDT_TMP 3
-
-#define LDT_NUL 0
-#define LDT_CODE 1
-#define LDT_DATA 2
-
-#endif
